[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Images/background/abc.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle.png" type="Texture" id=2]
[ext_resource path="res://Assets/UIIcons/Icon_Small_Blank_Arrow.png" type="Texture" id=3]
[ext_resource path="res://Levels/BodyParts/BodyParts.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Images/bodyparts/Dummy.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/bodyparts/covercard.png" type="Texture" id=8]
[ext_resource path="res://ThemePlayers/humanpartsTheme.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 40
use_filter = true
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bodyparts" type="Label" parent="NinePatchRect"]
anchor_left = 0.0976563
anchor_top = 0.0266667
anchor_right = 0.983398
anchor_bottom = 0.151667
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "Parte ng katawan"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="bodyparts" type="Label" parent="NinePatchRect/bodyparts"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 2 )
text = "Parte ng katawan"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Flashcards" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.0869141
anchor_top = 0.191667
anchor_right = 0.451172
anchor_bottom = 0.841667
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="goFlashcards" type="Button" parent="NinePatchRect/Flashcards"]
anchor_left = 0.190349
anchor_top = 0.205128
anchor_right = 0.828418
anchor_bottom = 0.797436
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Organs" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.554688
anchor_top = 0.206667
anchor_right = 0.844727
anchor_bottom = 0.808333
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="organs" type="Button" parent="NinePatchRect/Organs"]
anchor_left = 0.195286
anchor_top = 0.113573
anchor_right = 0.905724
anchor_bottom = 0.700831
margin_bottom = 1.52588e-05
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="cardtitle" type="Label" parent="NinePatchRect"]
anchor_left = 0.117188
anchor_top = 0.805
anchor_right = 0.458984
anchor_bottom = 0.93
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 3 )
text = "Flashcards"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="cardtitle" type="Label" parent="NinePatchRect/cardtitle"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 4 )
text = "Flashcards"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="cardtitle2" type="Label" parent="NinePatchRect"]
anchor_left = 0.52832
anchor_top = 0.805
anchor_right = 0.870117
anchor_bottom = 0.93
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 3 )
text = "Flashcards"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="cardtitle" type="Label" parent="NinePatchRect/cardtitle2"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 4 )
text = "Flashcards"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="goBack" type="Button" parent="."]
anchor_left = 0.0146484
anchor_top = 0.025
anchor_right = 0.0976564
anchor_bottom = 0.165
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pressedX" type="TextureRect" parent="goBack"]
anchor_left = 0.2
anchor_top = 0.190476
anchor_right = 0.788234
anchor_bottom = 0.797619
texture = ExtResource( 3 )
expand = true
flip_h = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -58.0
__meta__ = {
"_edit_lock_": true
}

[node name="bodypartsTheme" parent="." instance=ExtResource( 9 )]
unique_name_in_owner = true

[connection signal="visibility_changed" from="." to="." method="_on_Control_visibility_changed"]
[connection signal="pressed" from="NinePatchRect/Flashcards/goFlashcards" to="." method="_on_goFlashcards_pressed"]
[connection signal="pressed" from="goBack" to="." method="_on_goBack_pressed"]
